<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/please_feedback_your_problem_in_app"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Blank" />

    <EditText
        android:id="@+id/et_feedback_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_shape"
        android:lines="7"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="top"
        android:padding="3dp"
        android:hint="@string/write_down_your_opinion_here"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_feedback_send"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login"
        android:text="@string/hand_on" />

</LinearLayout>