<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dlg_shape"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/setting_local_code"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/et_dlgSetLocalCode_text"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:hint="@string/please_input_local_code"
        android:paddingLeft="5dp"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="10dp"
        android:background="@color/DimGray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_dlgSetLocalCode_OK"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/dlg_send_btn_selector"
            android:gravity="center"
            android:text="@string/ok"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Blank" />

        <TextView
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/DimGray" />

        <Button
            android:id="@+id/btn_dlgSetLocalCode_Cancel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/dlg_cancel_btn_selector"
            android:gravity="center"
            android:text="@string/cacel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Blank" />
    </LinearLayout>

</LinearLayout>