<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dip" >

    <Button
        android:id="@+id/btn_dlg_call_wifi_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/discuss_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/wifi_call"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Blank" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/DarkGray" />

    <Button
        android:id="@+id/btn_dlg_shanghui_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/collect_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/shanghuitong_call"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Blank" />

    <Button
        android:id="@+id/btn_dlg_call_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dip"
        android:background="@drawable/cancel_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/cancel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Blank" />

</LinearLayout>